MAP: initialize map, set custom marker

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,16 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- HERE JavaScript Libs & Style Sheets-->
+
+  <!-- STYLESHEETS -->
   <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
 
+  <!-- JS API -->
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
 
   <!-- HERE JavaScript Libs & Style Sheets end-->
-  <title>HERE Map with Custom Marker</title>
+  <title>Hide & Read</title>
 </head>
 
 <body>
